Streamlit-based application for Retrieval-Augmented Generation
Developed a Streamlit-based application for Retrieval-Augmented Generation (RAG) that allows users to upload PDF files and retrieve contextually relevant information for enhanced querying and analysis.

--- a/Rag with pdf file.ipynb
+++ b/Rag with pdf file.ipynb
@@ -145,9 +145,9 @@
     "\n",
     "            # LangChain LLM\n",
     "            llm = BaseChatOpenAI(\n",
-    "                model=\"deepseek/deepseek-r1-distill-llama-70b:free\",\n",
-    "                api_key=\"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\",\n",
-    "                base_url=\"https://openrouter.ai/api/v1\"\n",
+    "                model=,
+    "                api_key=,
+    "                base_url=,
     "            )\n",
     "\n",
     "            # Retrieve relevant content\n",
